tests/paczka1/fuzzy1/82197324.err
Error in line 3: Vd2m29q A971 93,2
Error in line 5: S315 A273 74,2
Error in line 11: S315 A971 49,5
Error in line 12: Brf A971 48,2
Error in line 17: Brf S716 39,0
Error in line 4: Vd2m29q S716 69,4
Error in line 22: Vd2m29q A273 30,6
Error in line 28: Brf S315 55,9
Error in line 32: Brf S716 14,4
Error in line 30: Vd2m29q A971 33,6
